--- a/templates/django_registration/activation_complete.html
+++ b/templates/django_registration/activation_complete.html
@@ -8,5 +8,5 @@
 {% endblock %}
 
 {% block content %}
-<p>Your account is now activated. <a href="{% url 'login' %}">Log in</a> now.</p>
+<p>Your account is now activated. <a href="{% url 'schema:login' %}">Log in</a> now.</p>
 {% endblock %}
