--- a/schema/templates/manufacturer.html
+++ b/schema/templates/manufacturer.html
@@ -1,2 +1,2 @@
-<a href="{% url 'manufacturer-detail' manufacturer.slug %}">{{ manufacturer }}</a> {% if manufacturer.country %}<img
+<a href="{% url 'schema:manufacturer-detail' manufacturer.slug %}">{{ manufacturer }}</a> {% if manufacturer.country %}<img
     src="{{ manufacturer.country.flag }}" alt="{{ manufacturer.country.name }}" height="11">{% endif %}
