--- a/schema/templates/schema/print_detail.html
+++ b/schema/templates/schema/print_detail.html
@@ -11,7 +11,7 @@
   {% if object.negative is not None %}
   <tr>
     <td>Negative</td>
-    <td><a href="{% url 'negative-detail' object.negative.id_owner %}">{{ object.negative }}</a></td>
+    <td><a href="{% url 'schema:negative-detail' object.negative.id_owner %}">{{ object.negative }}</a></td>
   </tr>
   {% endif %}
   {% if object.date is not None %}
@@ -23,7 +23,7 @@
   {% if object.paper_stock is not None %}
   <tr>
     <td>Paperstock</td>
-    <td><a href="{% url 'paperstock-detail' object.paper_stock.id %}">{{ object.paper_stock }}</a></td>
+    <td><a href="{% url 'schema:paperstock-detail' object.paper_stock.id %}">{{ object.paper_stock }}</a></td>
   </tr>
   {% endif %}
   {% if object.width is not None and object.height is not None %}
@@ -81,7 +81,7 @@
   {% if object.developer is not None %}
   <tr>
     <td>Developer</td>
-    <td><a href="{% url 'developer-detail' object.developer.slug %}">{{ object.developer }}</a></td>
+    <td><a href="{% url 'schema:developer-detail' object.developer.slug %}">{{ object.developer }}</a></td>
   </tr>
   {% endif %}
   {% if object.development_time is not None %}
@@ -96,7 +96,7 @@
     <td>
       <ul class="list-inline">
         {% for toner in object.toner.all %}
-        <li class="list-inline-item"><a href="{% url 'toner-detail' toner.slug %}">{{ toner }}</a></li>
+        <li class="list-inline-item"><a href="{% url 'schema:toner-detail' toner.slug %}">{{ toner }}</a></li>
         {% endfor %}</ul>
     </td>
   </tr>
@@ -140,7 +140,7 @@
   {% if object.archive is not None %}
   <tr>
     <td>Archive</td>
-    <td><a href="{% url 'archive-detail' object.archive.id_owner %}">{{ object.archive }}</a></td>
+    <td><a href="{% url 'schema:archive-detail' object.archive.id_owner %}">{{ object.archive }}</a></td>
   </tr>
   {% endif %}
 </table>
