--- a/schema/templates/schema/manufacturer_detail.html
+++ b/schema/templates/schema/manufacturer_detail.html
@@ -23,10 +23,10 @@
     <td>{{ object.country.name }} <img src="{{ object.country.flag }}" alt="{{ object.country.code }}"></td>
   </tr>
   {% endif %}
-  {% if object.url is not None %}
+  {% if object.linkurl is not None %}
   <tr>
     <td>URL</td>
-    <td><a href="{{ object.url }}">{{ object.url }}</a></td>
+    <td><a href="{{ object.linkurl }}">{{ object.linkurl }}</a></td>
   </tr>
   {% endif %}
   {% if object.founded is not None %}
@@ -49,7 +49,7 @@
   <tr>
     <td>Tags</td>
     <td>{% for tag in object.tags.all %}
-      <a class="btn btn-outline-primary" href="{% url 'tag-detail' tag|lower %}" role="button">{{ tag }}</a>
+      <a class="btn btn-outline-primary" href="{% url 'schema:tag-detail' tag|lower %}" role="button">{{ tag }}</a>
       {% endfor %}</td>
   </tr>
   {% endif %}
