--- a/schema/templates/list.html
+++ b/schema/templates/list.html
@@ -17,6 +17,10 @@
 {% render_table table %}
 <p class="text-center"><em>{{ page_obj.paginator.count }} objects found</em></p>
 {% else %}
+{% if request.GET.filter %}
+<p>No objects match your filter. <a href="{% url view.model|model_list %}">Reset filter</a></p>
+{% else %}
 <p>There are no objects in the list. <a href="{% url view.model|model_add %}">Add one</a> now!</p>
+{% endif %}
 {% endif %}
 {% endblock %}
