Fix URL namespacing bugs

--- a/schema/templates/index.html
+++ b/schema/templates/index.html
@@ -28,8 +28,8 @@
     <p>CameraHub is a public database of cameras, lenses and accessories, available to everyone. Registered users can
         add or edit data. They can also keep a private collection of their cameras and lenses. Check out the <a
             href="{% url 'help:concepts' %}">Concepts</a> page for more info.</p>
-    <p><a class="btn btn-primary btn-sm" href="{% url 'schema:login' %}" role="button">Login</a> or <a
-            class="btn btn-primary btn-sm" href="{% url 'schema:django_registration_register' %}" role="button">Register</a> to
+    <p><a class="btn btn-primary btn-sm" href="{% url 'login' %}" role="button">Login</a> or <a
+            class="btn btn-primary btn-sm" href="{% url 'django_registration_register' %}" role="button">Register</a> to
         start tracking private data about your own collection.
         {% endif %}
         Get started using the icons below, or use the menus above.</p>
