--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -8,5 +8,5 @@
 {% endblock %}
 
 {% block content %}
-<p>Your new password has been set. <a href="{% url 'schema:login' %}">Log in</a> now.</p>
+<p>Your new password has been set. <a href="{% url 'login' %}">Log in</a> now.</p>
 {% endblock %}
