Fix URL namespacing bugs

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -92,7 +92,7 @@
             </li>
             {% else %}
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'schema:login' %}">Login</a>
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
             {% endif %}
         </ul>
