Split out enlarger and enlargermodel

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -21,6 +21,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'schema:battery-list' %}">Batteries</a>
                     <a class="dropdown-item" href="{% url 'schema:developer-list' %}">Developers</a>
+                    <a class="dropdown-item" href="{% url 'schema:enlargermodel-list' %}">Enlarger models</a>
                     <a class="dropdown-item" href="{% url 'schema:filmstock-list' %}">Film stocks</a>
                     <a class="dropdown-item" href="{% url 'schema:filter-list' %}">Filters</a>
                     <a class="dropdown-item" href="{% url 'schema:format-list' %}">Formats</a>
