Split out flash and flashmodel

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -24,6 +24,7 @@
                     <a class="dropdown-item" href="{% url 'schema:enlargermodel-list' %}">Enlarger models</a>
                     <a class="dropdown-item" href="{% url 'schema:filmstock-list' %}">Film stocks</a>
                     <a class="dropdown-item" href="{% url 'schema:filter-list' %}">Filters</a>
+                    <a class="dropdown-item" href="{% url 'schema:flashmodel-list' %}">Flash models</a>
                     <a class="dropdown-item" href="{% url 'schema:format-list' %}">Formats</a>
                     <a class="dropdown-item" href="{% url 'schema:manufacturer-list' %}">Manufacturers</a>
                     <a class="dropdown-item" href="{% url 'schema:mount-list' %}">Mounts</a>
