Split out teleconverter and teleconvertermodel

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -32,6 +32,7 @@
                     <a class="dropdown-item" href="{% url 'schema:paperstock-list' %}">Paper stocks</a>
                     <a class="dropdown-item" href="{% url 'schema:process-list' %}">Processes</a>
                     <a class="dropdown-item" href="{% url 'schema:tag-list' %}">Tags</a>
+                    <a class="dropdown-item" href="{% url 'schema:teleconvertermodel-list' %}">Teleconverter models</a>
                     <a class="dropdown-item" href="{% url 'schema:toner-list' %}">Toners</a>
                 </div>
             </li>
