--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -89,7 +89,9 @@
   {% if object.exposed_at is not None %}
   <tr>
     <td>Exposed at</td>
-    <td>ISO {{ object.exposed_at }}</td>
+    <td>ISO {{ object.exposed_at }}{% if object.exposed_at > object.filmstock.iso %}<img src="{% static "svg/up.svg" %}"
+        width="20" height="20" alt="Push">{% elif object.exposed_at < object.filmstock.iso %}<img
+        src="{% static "svg/down.svg" %}" width="20" height="20" alt="Pull">{% endif %}</td>
   </tr>
   {% endif %}
 
@@ -200,6 +202,6 @@
     role="button">Load this film into a camera</a></li>{% endif %}
 {% if object.status == "Loaded" %}<li><a class="btn btn-primary" href="{% url 'schema:film-develop' object.id_owner %}"
     role="button">Develop this film</a></li>{% endif %}
-{% if object.status == "Developed" %}<li><a class="btn btn-primary" href="{% url 'schema:film-archive' object.id_owner %}"
-    role="button">Archive this film</a></li>{% endif %}
+{% if object.status == "Developed" %}<li><a class="btn btn-primary"
+    href="{% url 'schema:film-archive' object.id_owner %}" role="button">Archive this film</a></li>{% endif %}
 {%endblock%}
