--- a/schema/templates/heading.html
+++ b/schema/templates/heading.html
@@ -1,7 +1,7 @@
 {% load model_name %}
 {% load static %}
 
-<h4><img src="{% get_static_prefix %}svg/{{ view.model | model_name }}.svg" alt="{{ view.model | verbose_name | title}}"
+<h4><img src="{% get_static_prefix %}svg/{{ view.model.icon }}" alt="{{ view.model | verbose_name | title}}"
         width="30" height="30">
     <a href="{% url view.model|model_list %}">{{ view.model | verbose_name_plural | title }}</a></h4>
 {% if view.model.description %}<p>{{ view.model.description }}</p>{% endif %}
