--- a/schema/templates/search.html
+++ b/schema/templates/search.html
@@ -13,7 +13,7 @@
 <ul class="list-unstyled">
     {% for result in search_results %}
     <li class="media my-4">
-        <img class="mr-3" src="{% get_static_prefix %}svg/{{ result.object|model_name }}.svg"
+        <img class="mr-3" src="{% get_static_prefix %}svg/{{ result.object.icon }}"
             alt="{{ result.object|model_name|title }}" width="30" height="30"><a
             href="{{ result.url }}">{{ result }}</a></li>
     {% endfor %}
