--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -109,7 +109,7 @@
   {% if object.date_processed is not None %}
   <tr>
     <td>Date processed</td>
-    <td>{{ object.date_processed }}</td>
+    <td>{{ object.date_processed }} <small class="text-muted">{{ object.date_processed|timesince }} ago</small></td>
   </tr>
   {% endif %}
   {% if object.developer_previous_uses is not None %}
@@ -169,7 +169,7 @@
   {% if object.purchase_date is not None %}
   <tr>
     <td>Purchase date</td>
-    <td>{{ object.purchase_date }}</td>
+    <td>{{ object.purchase_date }} <small class="text-muted">{{ object.purchase_date|timesince }} ago</small></td>
   </tr>
   {% endif %}
   {% if object.price is not None %}
