--- a/schema/templates/schema/enlarger_detail.html
+++ b/schema/templates/schema/enlarger_detail.html
@@ -38,7 +38,7 @@
   {% if object.acquired is not None %}
   <tr>
     <td>Acquired</td>
-    <td>{{ object.acquired }}</td>
+    <td>{{ object.acquired }} <small class="text-muted">{{ object.acquired|timesince }} ago</small></td>
   </tr>
   {% endif %}
   {% if object.cost is not None %}
@@ -50,7 +50,7 @@
   {% if object.lost is not None %}
   <tr>
     <td>Lost</td>
-    <td>{{ object.lost }}</td>
+    <td>{{ object.lost }} <small class="text-muted">{{ object.lost|timesince }} ago</small></td>
   </tr>
   {% endif %}
   {% if object.lost_price is not None %}
