--- a/schema/templates/schema/flashmodel_detail.html
+++ b/schema/templates/schema/flashmodel_detail.html
@@ -126,7 +126,7 @@
   {% if object.acquired is not None %}
   <tr>
     <td>Acquired</td>
-    <td>{{ object.acquired }}</td>
+    <td>{{ object.acquired }} <small class="text-muted">{{ object.acquired|timesince }} ago</small></td>
   </tr>
   {% endif %}
   {% if object.cost is not None %}
